--- a/laterna-react-app/src/components/Nav.scss
+++ b/laterna-react-app/src/components/Nav.scss
@@ -15,6 +15,18 @@ button {
   width: 17.68px;
 }
 
+#showLanternList{
+  @include flex-row-between;
+  width: 142.92px;
+
+  p{
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #F2EDEB;
+    margin: 0;
+  }
+}
+
 .Navigation {
   position: fixed;
   visibility: hidden;
@@ -26,12 +38,13 @@ button {
     position: fixed;
     right: 0;
     top: 0;
-    background-color: #2E3D4BE5;
+    // background-color: #2E3D4BE5;
+    background-color: #2E3D4B;
     width: 100%;
     height: 100vh;
     padding-right: 36px;
     font-family: 'Sulphur Point', sans-serif;
-    z-index: 1;
+    z-index: 3;
 
     &--header {
       @include flex-row-between;
@@ -44,6 +57,34 @@ button {
       align-items: flex-end;
       list-style-type: none;
       min-height: 254.89px;
+
+      &--lantern-list{
+        display: none;
+
+        &--active{
+          display: block;
+          @include flex-column-between;
+          align-items: flex-end;
+          list-style-type: none;
+          height: 721.11px;
+        
+
+         button:nth-child(1){
+            margin-top: 40.11px;
+          }
+
+          a {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-size: 16px;
+            font-family: 'Sulphur Point', sans-serif;
+            letter-spacing: 0px;
+            color: #F2EDEB;
+            opacity: 1;
+          }
+        }
+        
+      }
     }
   }
 }
