--- a/laterna-react-app/src/components/Navigation/NavDesktop.scss
+++ b/laterna-react-app/src/components/Navigation/NavDesktop.scss
@@ -31,6 +31,7 @@
       border-bottom: 4px solid #B04527;
       transform: scaleX(0);
       transition: transform 250ms ease-in-out;
+      margin-top: 5px;
     }
 
     &:hover:after {
