--- a/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
+++ b/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
@@ -75,6 +75,40 @@
     #goToStore {
       position: static;
     }
+
+    &--3pics {
+      height: 100%;
+
+      &--wrapper {
+        width: 500px;
+        position: relative;
+        height: 100%;
+
+        img {
+          position: absolute;
+
+          &:nth-child(1) {
+            left: 257px;
+            top: -45px;
+          }
+
+          &:nth-child(2) {
+            top: 90px;
+            left: 64px;
+          }
+
+          &:nth-child(3) {
+            top: -79px;
+            left: -36px;
+          }
+
+          &:hover {
+            transform: scale(1.1);
+            transition: 0.2s;
+          }
+        }
+      }
+    }
   }
 }
 
@@ -90,12 +124,27 @@
     }
 
     &--3pics {
-      img {
-        &:hover {
-          transform: scale(1.1);
-          transition: 0.2s;
+      &--wrapper {
+        img {
+
+          &:nth-child(1) {
+            left: 284px;
+            top: -53px;
+          }
+
+          &:nth-child(2) {
+            top: 90px;
+            left: 145px;
+          }
+
+          &:nth-child(3) {
+            top: -79px;
+            left: 0;
+          }
         }
+
       }
+
     }
   }
 }
