--- a/laterna-react-app/src/components/Elements/Input.scss
+++ b/laterna-react-app/src/components/Elements/Input.scss
@@ -33,3 +33,17 @@
   }
 
 }
+
+@media (min-device-width: 1024px) {
+  .InputWrapper {
+
+    label {
+      font-size: 20px;
+      letter-spacing: 0.5px;
+    }
+
+    input[type="text"] {
+      width: 100%;
+    }
+  }
+}
