nav and routing fixed, button on hover, code formatted

--- a/laterna-react-app/src/components/Footer/Footer.scss
+++ b/laterna-react-app/src/components/Footer/Footer.scss
@@ -43,6 +43,10 @@
     button {
       @include remove-button-style;
 
+      &:hover {
+        transform: scale(0.95);
+      }
+
       a {
         border: none;
       }
