--- a/laterna-react-app/src/components/PassportPage/PassportGetInfo/PassportGetInfo.scss
+++ b/laterna-react-app/src/components/PassportPage/PassportGetInfo/PassportGetInfo.scss
@@ -52,6 +52,12 @@
 
     #sendBtn {
       transform: translateY(24px);
+      z-index: 2;
+
+      &:hover {
+        transform: scale(0.95);
+        cursor: pointer;
+      }
     }
 
     &--header {
