--- a/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
+++ b/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
@@ -74,6 +74,10 @@
 
     #goToStore {
       position: static;
+
+      &:hover {
+        transform: scale(0.95);
+      }
     }
 
     &--3pics {
