--- a/laterna-react-app/src/components/ContactPage/ContactChannels/ContactChannels.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactChannels/ContactChannels.scss
@@ -38,6 +38,10 @@
     button {
       @include remove-button-style;
 
+      &:hover {
+        transform: scale(0.95);
+      }
+
       a {
         border: none;
       }
