--- a/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
@@ -50,9 +50,14 @@
     height: 646px;
 
     #sendBtn {
-      align-self: flex-end;
-      transform: translate(1px, 30px);
       position: static;
+      margin-top: 30px;
+      margin-left: 390px;
+      transform: translateX(0);
+
+      &:hover {
+        transform: scale(0.95);
+      }
     }
 
     &--form {
