--- a/laterna-react-app/src/components/Navigation/NavListItem.scss
+++ b/laterna-react-app/src/components/Navigation/NavListItem.scss
@@ -12,8 +12,9 @@
 @media(min-device-width: 1024px) {
   .Navigation--List--NavListItem {
     margin: 0;
-
     list-style-type: none;
+    height: 20px;
+    line-height: 20px;
 
     &:nth-child(1) {
       margin-right: 31px;
@@ -32,12 +33,12 @@
       color: #2E3D4B;
 
       &:after {
-      display: block;
-      content: '';
-      border-bottom: 4px solid #B04527;
-      transform: scaleX(0);
-      transition: transform 250ms ease-in-out;
-    }
+        display: block;
+        content: '';
+        border-bottom: 4px solid #B04527;
+        transform: scaleX(0);
+        transition: transform 250ms ease-in-out;
+      }
 
       &:hover:after {
         transform: scaleX(1);
