--- a/laterna-react-app/src/components/StartPage/IntroPassport/IntroPassport.scss
+++ b/laterna-react-app/src/components/StartPage/IntroPassport/IntroPassport.scss
@@ -45,6 +45,13 @@
 }
 
 @media(min-device-width: 1024px) {
+
+  #passportDetails {
+    &:hover {
+      transform: scale(0.95);
+    }
+  }
+
   .IntroPassport {
     height: auto;
     align-items: center;
@@ -87,7 +94,7 @@
           bottom: 0;
         }
 
-        &:hover{
+        &:hover {
           transform: scale(1.1);
           transition: 0.2s;
         }
