--- a/laterna-react-app/src/components/Footer/Footer.scss
+++ b/laterna-react-app/src/components/Footer/Footer.scss
@@ -66,7 +66,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .Footer {
     display: flex;
     flex-direction: row;
@@ -129,7 +129,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
   .Footer {
 
     a {
