--- a/laterna-react-app/src/components/LanternPage/LanternRest.scss
+++ b/laterna-react-app/src/components/LanternPage/LanternRest.scss
@@ -27,13 +27,17 @@
   }
 }
 
-@media (min-device-width: 1024px) {
+@media (min-width: 1024px) {
   .lanternRest {
     &--footer {
-      width: 527px;
       margin-top: 70px;
       margin-bottom: 61px;
-      align-self: flex-start;
+      align-self: center;
+      width: 996px;
+
+      p {
+        width: 527px;
+      }
     }
   }
 }
