--- a/laterna-react-app/src/components/StartPage/Introduction/Introduction.scss
+++ b/laterna-react-app/src/components/StartPage/Introduction/Introduction.scss
@@ -26,7 +26,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .Introduction {
     text-align: center;
     height: 776.31px;
@@ -69,7 +69,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
   .Introduction--header--headerWrapper1 {
     top: 54px;
     left: 138px;
