--- a/laterna-react-app/src/components/ContactPage/ContactChannels/ContactChannels.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactChannels/ContactChannels.scss
@@ -51,7 +51,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .ContactChannels {
     @include flex-column-between;
     align-items: flex-start;
@@ -99,7 +99,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
   .ContactChannels {
     margin-right: 201px;
   }
