--- a/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
@@ -42,7 +42,7 @@
 
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .ContactForm {
     width: 535.25px;
     align-items: flex-start;
