--- a/laterna-react-app/src/components/Header/Header.scss
+++ b/laterna-react-app/src/components/Header/Header.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .PageHeader {
     height: 99px;
     justify-content: center;
@@ -62,7 +62,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
   .PageHeader {
     &--wrapper {
       .PageHeader--logo {
