--- a/laterna-react-app/src/components/Navigation/NavListItem.scss
+++ b/laterna-react-app/src/components/Navigation/NavListItem.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .Navigation--List--NavListItem {
     margin: 0;
     list-style-type: none;
