--- a/laterna-react-app/src/components/PassportPage/PassportDescription/PassportDescription.scss
+++ b/laterna-react-app/src/components/PassportPage/PassportDescription/PassportDescription.scss
@@ -53,7 +53,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
   .PassportDescription {
     justify-content: center;
     position: relative;
@@ -145,7 +145,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
   .PassportDescription {
 
     &--header {
