--- a/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
+++ b/laterna-react-app/src/components/StartPage/IntroGadgets/IntroGadgets.scss
@@ -35,7 +35,7 @@
   }
 }
 
-@media(min-device-width: 1024px) {
+@media(min-width: 1024px) {
 
   .IntroGadgets {
     height: 800px;
@@ -116,7 +116,7 @@
   }
 }
 
-@media(min-device-width: 1366px) {
+@media(min-width: 1366px) {
 
   .IntroGadgets {
     &--gadgetsGetDetails {
