--- a/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
@@ -9,6 +9,16 @@
   background-color: #F2EDEB;
   position: relative;
 
+  label {
+    text-align: left;
+    font-family: ClarikaProGeoLight;
+    width: 100%;
+    letter-spacing: 0.4px;
+    color: #2E3C4B;
+    line-height: 23px;
+    display: block;
+  }
+
   &--header {
     @include main-text-style;
     font-size: 26px;
@@ -19,6 +29,18 @@
   &--form {
     width: 302px;
     margin-top: 31px;
+
+    textarea {
+      @include paragraph;
+      width: 302px;
+      height: 235px;
+      border: none;
+      resize: none;
+      min-width: 302px;
+      max-width: 302px;
+      min-height: 235px;
+      max-height: 235px;
+    }
 
     &--checkbox {
       @include flex-row-between;
@@ -49,6 +71,23 @@
     margin-top: 74px;
     height: 646px;
 
+    label {
+      font-size: 20px;
+      letter-spacing: 0.5px;
+      line-height: 23px;
+    }
+
+    textarea {
+      @include paragraph;
+      width: 100%;
+      height: 223px;
+      border: none;
+      min-width: 100%;
+      max-width: 100%;
+      min-height: 223px;
+      max-height: 223px;
+    }
+
     #sendBtn {
       position: static;
       margin-top: 30px;
@@ -62,12 +101,22 @@
 
     &--form {
       width: 100%;
+
+      &--checkbox {
+        justify-content: flex-start;
+        width: 100%;
+
+        label {
+          font-size: 20px;
+        }
+      }
     }
 
     &--name-wrapper {
       @include flex-row-between;
 
       .InputWrapper {
+
         input[type="text"] {
           width: 260.25px;
         }
