--- a/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
+++ b/laterna-react-app/src/components/ContactPage/ContactForm/ContactForm.scss
@@ -40,6 +40,12 @@
       max-width: 302px;
       min-height: 235px;
       max-height: 235px;
+      box-sizing: border-box;
+      padding: 10px;
+
+      &:focus {
+        outline: none;
+      }
     }
 
     &--checkbox {
