--- a/laterna-react-app/src/components/LanternPage/LanternBasicInfo.scss
+++ b/laterna-react-app/src/components/LanternPage/LanternBasicInfo.scss
@@ -37,7 +37,10 @@
   .Lantern {
 
     &--basic-info {
+      justify-content: center;
       width: auto;
+      max-width: 280px;
+      height: auto;
 
 
       h2 {
@@ -47,6 +50,16 @@
 
       &--wrapper {
         width: auto;
+
+        &:nth-child(1) {
+          margin-top: 0;
+        }
+
+        .border {
+          width: 10px;
+          margin-top: 4px;
+          margin-bottom: 1px;
+        }
 
         p {
           width: auto;
