--- a/laterna-react-app/src/components/Navigation/NavDesktop.scss
+++ b/laterna-react-app/src/components/Navigation/NavDesktop.scss
@@ -39,11 +39,11 @@
   }
 
   &.active {
-    background-color: #2E3C4BE6;
+    background-color: #2E3C4B;
 
     p {
       text-transform: uppercase;
-      font-size: 20px;
+      font-size: 18px;
       line-height: 20px;
       margin: 0;
       color: #F2EDEB;
@@ -59,7 +59,7 @@
 
   &--list {
     @include flex-row-between;
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin: 0;
     padding: 0;
     width: 651px;
@@ -75,8 +75,9 @@
       align-items: flex-start;
       width: 100vw;
       position: absolute;
-      top: 100%;
-      background-color: #2E3C4BE6;
+      top: 99%;
+      left: 0;
+      background-color: #2E3C4B;
       height: 247px;
       list-style-type: none;
       margin: 0;
@@ -97,6 +98,14 @@
       line-height: 35px;
       text-align: left;
       width: 184.43px;
+    }
+  }
+}
+
+@media (min-width: 1366px) {
+  .NavDesktop {
+    &--list {
+      justify-content: flex-start;
     }
   }
 }
