--- a/laterna-react-app/src/components/Navigation/NavListItem.scss
+++ b/laterna-react-app/src/components/Navigation/NavListItem.scss
@@ -16,17 +16,9 @@
     height: 20px;
     line-height: 20px;
 
-    &:nth-child(1) {
-      margin-right: 31px;
-    }
-
-    &:nth-child(3) {
-      margin-right: 58px;
-      margin-left: 31px;
-    }
-
+    &:nth-child(3),
     &:nth-child(4) {
-      margin-right: 58px;
+      margin-right: 33px;
     }
 
     a {
@@ -43,6 +35,23 @@
       &:hover:after {
         transform: scaleX(1);
       }
+    }
+  }
+}
+
+@media(min-width: 1366px) {
+  .Navigation--List--NavListItem {
+    &:nth-child(1) {
+      margin-right: 31px;
+    }
+
+    &:nth-child(3) {
+      margin-right: 58px;
+      margin-left: 31px;
+    }
+
+    &:nth-child(4) {
+      margin-right: 58px;
     }
   }
 }
