--- a/laterna-react-app/src/components/ShopPage/ShopPage.scss
+++ b/laterna-react-app/src/components/ShopPage/ShopPage.scss
@@ -21,7 +21,7 @@
   &--articles {
     @include flex-column-between;
     width: 302px;
-    height: 2012px;
+    height: 1156px;
     margin-top: 60px;
     margin-bottom: 60px;
   }
@@ -70,8 +70,8 @@
       @include flex-row-between;
       flex-wrap: wrap;
       width: 900px;
-      height: 1800px;
-      margin: 0;
+      height: 1100px;
+      margin: 50px 0;
     }
 
     &--product {
@@ -98,7 +98,7 @@
   .ShopPage {
     &--articles {
       width: 1088px;
-      height: 2150px;
+      height: 1300px;
     }
 
     &--product {
