shopPage refined, carousel and lanternPage pictures changed, browser router

--- a/laterna-react-app/src/components/LanternPage/LanternPage.scss
+++ b/laterna-react-app/src/components/LanternPage/LanternPage.scss
@@ -43,8 +43,10 @@
       height: 496px;
 
       img {
-     margin-right: 232.25px;
-   }
+        margin-right: 232.25px;
+        width: 351px;
+        height: 496px;
+      }
     }
 
     p {
