--- a/laterna-react-app/src/components/PassportPage/PassportGetInfo/PassportGetInfo.scss
+++ b/laterna-react-app/src/components/PassportPage/PassportGetInfo/PassportGetInfo.scss
@@ -7,6 +7,7 @@
   justify-content: flex-start;
   background-color: #F2EDEB;
   height: 469.5px;
+  padding-top: 30px;
 
   &--header {
     @include flex-column-between;
