--- a/laterna-react-app/src/components/PassportPage/PassportDescription/PassportDescription.scss
+++ b/laterna-react-app/src/components/PassportPage/PassportDescription/PassportDescription.scss
@@ -5,7 +5,6 @@
 .PassportDescription {
   @include flex-column-between;
   background-color: #F2EDEB;
-  height: 2458.5px;
 
   &--header {
     @include flex-column-between;
@@ -21,9 +20,16 @@
 
   &--article {
     @include flex-column-between;
+    justify-content: space-around;
     height: 2306.5px;
     max-width: 302px;
-    position: relative;
+
+    &--picWrapper {
+      width: 100%;
+      height: 230px;
+      position: relative;
+      margin-top: 35px
+    }
 
     p {
       @include paragraph;
@@ -42,8 +48,8 @@
 
       &:nth-child(2) {
         position: absolute;
-        top: 207px;
-        left: 7px;
+        top: -19px;
+        right: 0px;
       }
 
       &:nth-child(9) {
